# analyse

./: .gitignore  Analyser.cabal  README  dz.stuff
src/: Main.hs
src/Analyse/: Language.hs  Tools.hs  Types.hs
